# opengl-game

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
include/: opengl.h
include/GLFW/: glfw3native.h
include/freetype/config/: ftoption.h
lib/: BulletDynamics.lib  LinearMath.lib  fmt.lib  freetyped.lib
res/: README.md  blueprints.json  gamedata.cfg  imports.cfg  materials.json  objects.json  video.cfg
res/models/: cave.mtl  gate.mtl  lever.mtl  torch.mtl
res/shaders/: areatext.frag  huditem.vert  lava.frag  lit.frag  ocean.frag  ocean.vert  portal.frag  skybox.frag  skybox.vert  statustext.frag  strobe_unlit.frag  unlit.frag
res/shaders/standard/: framebuffer.frag  lit.frag  skybox.vert  uishape.frag  unlit.frag
res/stages/: bigcave.json  cave.json  passage.json  test.json  turtle.json
res/stages/sanctuary/: entrance.json  sanctuary.json
src/: gamewindow.cpp  gamewindow.h  input.h  main.cpp  object.cpp  object.h  opengl.h
src/core/: event.h  eventhandler.h  game.cpp  game.h  gamewindow.cpp  gamewindow.h  input.h  stage.cpp  stage.h  stagemanager.cpp  stagemanager.h  subscriptionevent.h  wchar.h
src/core/entity/: component.cpp  component.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  serializable.h  transform.cpp  transform.h
src/core/entity/component/: meshrenderer.cpp  meshrenderer.h  playercontroller.cpp  playercontroller.h  rotatecube.h  transform.h
src/core/graphics/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  object.h  postprocessing.cpp  postprocessing.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shaders.h  shape.cpp  shape.h  texture.cpp  texture.h
src/core/graphics/component/: light.cpp  light.h  meshrenderer.cpp  meshrenderer.h
src/core/io/: fs.h  paths.h  resourcemanager.cpp  resourcemanager.h  serializablestruct.cpp  serializablestruct.h  serializer.cpp  serializer.h  serializetypes.cpp  serializetypes.h  stage.cpp  stage.h
src/core/io/files/: blueprints.cpp  blueprints.h  cfg.cpp  cfg.h  materials.cpp  materials.h  objects.cpp  objects.h  stage.cpp  stage.h
src/core/physics/: collider.h  debugdrawer.cpp  debugdrawer.h  physics.cpp  physics.h  utils.h
src/core/physics/component/: rigidbody.cpp  rigidbody.h
src/core/stage/: serializetypes.h  stage.cpp  stage.h
src/core/terrain/: plane.cpp  plane.h
src/core/ui/: canvas.cpp  canvas.h  text.cpp  text.h  textcomponent.cpp  textcomponent.h  uicomponent.h
src/entity/: component.h  entity.cpp  entity.h
src/entity/component/: meshrenderer.cpp  meshrenderer.h  playercontroller.cpp  playercontroller.h  rotatecube.h  teapot.h  transform.h
src/game/: configs.h  console.cpp  controls.h  event.cpp  event.h  eventparser.cpp  eventparser.h  game.cpp  game.h  hud.cpp  hud.h  strutils.cpp  strutils.h
src/game/components/: animationcomponent.cpp  animationcomponent.h  debugoverlay.cpp  debugoverlay.h  gate.cpp  gate.h  huditem.cpp  huditem.h  interactable.cpp  interactable.h  killplane.cpp  killplane.h  livingentity.cpp  livingentity.h  player.cpp  player.h  playercontroller.cpp  playercontroller.h  rotatecube.h  rotationanimation.cpp  rotationanimation.h  sanctuarysun.cpp  sanctuarysun.h  ship.cpp  ship.h  turtle.cpp  turtle.h
src/game/console/: commands.cpp  commands.h  console.cpp  console.h
src/game/event/: event.cpp  event.h  eventparser.cpp
src/game/ui/: canvaslayout.cpp  canvaslayout.h  hud.cpp  hud.h  mainmenu.cpp  mainmenu.h
src/graphics/: camera.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shaders.h
user/: controls.cfg  video.cfg
(+6 files in other folders)
